<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.4</version>
    </parent>

    <groupId>net.muon.data</groupId>
    <artifactId>data-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
    </properties>

    <modules>
        <module>data-core</module>

        <module>data-nft</module>

        <module>data-binance</module>
        <module>data-kucoin</module>
        <module>data-gateio</module>
        <module>data-gemini</module>
        <module>data-kraken</module>

        <module>data-uniswap</module>
        <module>data-sushiswap</module>

        <module>data-app</module>
    </modules>

</project>